--- a/.gitignore
+++ b/.gitignore
@@ -33,6 +33,8 @@
 # Generated files
 .idea/**/contentModel.xml
 
+./.idea
+
 # Sensitive or high-churn files
 .idea/**/dataSources/
 .idea/**/dataSources.ids
