--- a/.gitignore
+++ b/.gitignore
@@ -424,3 +424,5 @@ pyrightconfig.json
 
 # End of https://www.toptal.com/developers/gitignore/api/git,pycharm,visualstudiocode,intellij,python,java
 /.venv/
+/coderesources/
+/.idea/
