--- a/.gitignore
+++ b/.gitignore
@@ -425,3 +425,4 @@ pyrightconfig.json
 # End of https://www.toptal.com/developers/gitignore/api/git,pycharm,visualstudiocode,intellij,python,java
 /.venv/
 /.idea/
+/codeRessources/
