--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,13 @@ FLASK_HOST=
 FLASK_PORT=
 
 # Storage config
+LOCAL_STORAGE_PATH=your_folder
+VITE_AWS_HOST=https://aws.host.example.com/
+VITE_AWS_ACCESS_KEY=123
+VITE_AWS_SECRET_KEY=123
+VITE_AWS_S3_BUCKET_NAME=your_bucket
+VITE_AWS_REGION=your_region
+
 
 # Redis config
 REDIS_HOST=
